# example-json-read

./: CMakeLists.txt  README.md
src/: main.c
tests/data/: json_org_01.json  utf8_encoding.json
